# DO_CT_LIO

./: .gitignore  DEVELOPMENT_LOG.md  DEVELOPMENT_PLAN.md  EVALUATION_RESULTS.md  README-ct-lio-noetic-zh.md  SELF_REVIEW.md
docker/: Dockerfile.noetic  build_ct_lio_noetic.sh  build_do_ct_lio_noetic.sh  run_ct_lio_noetic.sh  run_do_ct_lio_noetic.sh
docs/superpowers/plans/: 2026-05-19-do-ct-lio-implementation.md  2026-05-20-liosam-config-drift-remediation-implementation.md
docs/superpowers/specs/: 2026-05-19-do-ct-lio-design.md  2026-05-20-liosam-config-drift-remediation-design.md
src/ct_lio/: CMakeLists.txt  package.xml
src/ct_lio/cmake/: packages.cmake
src/ct_lio/config/: liosam_livox.yaml  mapping.yaml
src/ct_lio/launch/: run_eskf.launch  run_gazebo_mapping.launch  run_liosam_livox.launch
src/ct_lio/src/apps/: CMakeLists.txt  main_eskf.cpp  test_cloud_convert_livox.cpp  test_do_ct_diagnostics.cpp
src/ct_lio/src/common/: cloudMap.hpp
src/ct_lio/src/liw/: CMakeLists.txt  do_ct_diagnostics.cpp  do_ct_diagnostics.h  lidarFactor.cpp  lidarFactor.h
src/ct_lio/src/liw/lio/: lidarodom.cpp  lidarodom.h
src/ct_lio/src/preprocess/: CMakeLists.txt
src/ct_lio/src/preprocess/cloud_convert/: cloud_convert.cc  cloud_convert.h
src/ct_lio/src/tools/: point_types.h
src/livox_ros_driver2/: CMakeLists.txt  package.xml
src/livox_ros_driver2/msg/: CustomMsg.msg  CustomPoint.msg
tools/: evaluate_do_ct_lio.py
