<?xml version="1.0"?>
<package format="2">
  <name>livox_ros_driver2</name>
  <version>0.0.0</version>
  <description>Minimal Livox custom messages required by DO-CT-LIO bag playback.</description>
  <maintainer email="ubuntu20@example.com">ubuntu20</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
